# Kaleidoscope

./: .gitignore  CMakeLists.txt  README.md
include/: ast.h  codegen.h  lexer.h  parser.h  token.h
lib/: CMakeLists.txt  ast.h  codegen.cpp  lexer.cpp  lexer.h  parser.cpp
src/: ast.cpp  main.cpp  parser.cpp  token.cpp
